            - Deprecated clone().  Just use the copy constructor instead.
        Class TxICore:
            - Renamed TeXName() to texName().  The old name is kept but
              deprecated.
        Class TxIDiagonalCore, TxIParallelCore:
            - Added move/copy constructors and move/copy assignment operators.
            - Added member and global swap() functions.
        Class TypeTrie:
            - Added move/copy constructors and move/copy assignment operators.
            - Added member and global swap() functions.
            - Added short and detailed output functions.
        Class UnsolvedCase:
            - New exception class.
        Class ValidityConstraints:
            - This is a new, completely re-engineered class that replaces the
              old EnumConstraints.  It is easier to use within enumeration
              algorithms, and it carries significantly less overhead.
        Class Vector:
            - New operator !=.  Also, both == and != can now compare vectors
              of different sizes (which are always considered non-equal).
            - New constructors that take iterator ranges and initialiser lists.
            - New move constructor and move assignment operator.
            - New binary +, - and scalar * operators.
            - New routine isZero().
            - New routine scaleDown() for vectors over Regina's integer classes.
            - New typedef Element.
            - New static routine unit().
            - Provides the standard str() and detail() output functions.
            - Added a non-const operator[]; the old setElement() is now
              deprecated.
            - Operators +=, -=, *= now return a reference, as they should.
            - The class Vector<Integer> is now available in python, via
              the typedef VectorInt (in a similar way to MatrixInt).
            - Deprecated class constants zero, one and minusOne; just use
              0, 1 and -1 instead.