@@ -94,7 +94,7 @@ void addFacetPairing3(pybind11::module_& m) {
             const std::function<void(const FacetPairing<3>&,
                 FacetPairing<3>::IsoList)>&>)
     ;
-    regina::python::add_output(c, regina::python::PYTHON_REPR_NONE);
+    regina::python::add_output(c);
     regina::python::add_eq_operators(c);
 
     m.def("swap",
