@@ -132,7 +132,7 @@ void addNormalHypersurface(pybind11::module_& m) {
             &NormalHypersurface::reconstructTetrahedra)
         .def(pybind11::self + pybind11::self)
     ;
-    regina::python::add_output(c, regina::python::PYTHON_REPR_NONE);
+    regina::python::add_output(c);
     regina::python::add_eq_operators(c);
 
     m.def("swap",
