@@ -121,7 +121,7 @@ void addMatrixBool(pybind11::module_& m) {
         .def("swapCols", &Matrix<bool>::swapCols)
         .def("swapColumns", &Matrix<bool>::swapCols) // deprecated
     ;
-    regina::python::add_output(c, regina::python::PYTHON_REPR_NONE);
+    regina::python::add_output(c);
     regina::python::add_eq_operators(c);
 
     m.def("swap", (void(*)(Matrix<bool>&, Matrix<bool>&))(regina::swap));
