@@ -218,7 +218,7 @@ void addMatrixInt(pybind11::module_& m) {
             return m * v;
         })
     ;
-    regina::python::add_output(c, regina::python::PYTHON_REPR_NONE);
+    regina::python::add_output(c);
     regina::python::add_eq_operators(c);
 
     m.def("swap", (void(*)(MatrixInt&, MatrixInt&))(regina::swap));
