@@ -52,24 +52,33 @@ void addTxICore(pybind11::module_& m) {
         .def("texName", &TxICore::texName)
         .def("TeXName", &TxICore::texName) // deprecated
     ;
-    regina::python::add_output(c, regina::python::PYTHON_REPR_NONE);
-    regina::python::add_eq_operators(c);
+    // Leave the output routines for subclasses to wrap, since __repr__
+    // will include the (derived) class name.
+    // Also leave the equality operators for subclasses to wrap, since
+    // each subclass of TxICore provides its own custom == and != operators.
+    regina::python::no_eq_operators(c);
 
-    pybind11::class_<TxIDiagonalCore, regina::TxICore>(m, "TxIDiagonalCore")
+    auto d = pybind11::class_<TxIDiagonalCore, regina::TxICore>(
+            m, "TxIDiagonalCore")
         .def(pybind11::init<unsigned long, unsigned long>())
         .def(pybind11::init<const TxIDiagonalCore&>())
         .def("swap", &TxIDiagonalCore::swap)
         .def("size", &TxIDiagonalCore::size)
         .def("k", &TxIDiagonalCore::k)
     ;
+    regina::python::add_output(d);
+    regina::python::add_eq_operators(d);
 
     m.def("swap", (void(*)(TxIDiagonalCore&, TxIDiagonalCore&))(regina::swap));
 
-    pybind11::class_<TxIParallelCore, regina::TxICore>(m, "TxIParallelCore")
+    auto p = pybind11::class_<TxIParallelCore, regina::TxICore>(
+            m, "TxIParallelCore")
         .def(pybind11::init<>())
         .def(pybind11::init<const TxIParallelCore&>())
         .def("swap", &TxIParallelCore::swap)
     ;
+    regina::python::add_output(p);
+    regina::python::add_eq_operators(p);
 
     m.def("swap", (void(*)(TxIParallelCore&, TxIParallelCore&))(regina::swap));
 }
